Thu Sep 24 10:06:19 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/mathn.rb (Fixnum#**, Float#**, Bignum#**): Allow fractional
	  power for negative numbers when 'mathn' is required [redmine:783]

Wed Sep 23 05:36:55 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* eval.c (umethod_bind): Fix bug that disallowed methods from
	  singleton classes to be used for UnboundMethod#bind and
	  Module#define_method, even when that singleton class was of the right
	  kind_of [ruby-core:25632]

Sun Sep 20 09:53:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/open3.rb (Open3#popen3): fixed and improved rdoc.  [ruby-core:25658]

Fri Sep 18 14:44:13 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select): wait specified time on select.

Fri Sep 18 14:30:40 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select): on 1.8, we don't need to poll sockets,
	  because our select is never called from multiple threads.

Thu Sep 17 14:33:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_0, rb_thread_start_1): should call star
	  timer after added new thread to thread list.  [ruby-core:25613]

Thu Sep 17 06:25:32 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb (Matrix#rank): Two bug fixes. One made
	  Matrix[[0,0],[0,0],[1,0]].rank raise a NoMethodError while the other
	  one had Matrix[[0,1],[0,0],[1,0]].rank raise a TypeError.

Thu Sep 17 06:19:27 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Optimizations

Wed Sep 16 17:25:43 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb (Matrix#/): Fix was is obviously a bug

Wed Sep 16 16:51:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_timer): start to catch SIGVTALRM together
	  with timer thread.   [ruby-core:25606]

	* eval.c (rb_thread_atfork): stop timer thread.

Wed Sep 16 15:00:21 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
